--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,4 +1,8 @@
 RewriteEngine on
+RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+#RewriteCond %{HTTP_HOST} ^wesunsolve\.be/(.+)$ [NC]
+#RewriteRule ^(.*)$ http://wesunsolve.net/$1 [R=301,L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.+\.php)$(.+)$ $1/$2 [L,QSA]
