tgo: Fixed bug with patch search, sometimes, lower limit was < 0
tgo: Adapted the Patches announcement to use google short url service
     as backup if our own service is failling.

tgo: Added rules to .htaccess for new domains

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,8 +1,9 @@
 RewriteEngine on
 RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
-RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
-#RewriteCond %{HTTP_HOST} ^wesunsolve\.be/(.+)$ [NC]
-#RewriteRule ^(.*)$ http://wesunsolve.net/$1 [R=301,L]
+RewriteRule ^(.*)$ http://%1/$1 [R=301,NC]
+RewriteCond %{HTTP_HOST} ^wesunsolve.be$ [OR]
+RewriteCond %{HTTP_HOST} ^sunsolve.espix.org$
+RewriteRule ^(.*)$ http://wesunsolve.net/$1 [R=301,L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.+\.php)$(.+)$ $1/$2 [L,QSA]
