tgo: Various changes into checksumming and file search

--- a/irc/modules/sunsolve/sunsolve.conf
+++ b/irc/modules/sunsolve/sunsolve.conf
@@ -25,6 +25,7 @@
 file	sunsolve	modules/sunsolve/sunsolve.php
 
 priv	!patch	1	"<patch>"	true	0	sunsolve	priv_patch
+priv	!sum	1	"<md5>"		true	0	sunsolve	priv_sum
 priv	!bug	1	"<bug>"		true	0	sunsolve	priv_bug
 priv	!status	true	true		true	0	sunsolve	priv_status
 priv	!help	true	true		true	0	sunsolve	priv_help
