tgo: Added tool to display mailling lists

--- a/etc/awffull.conf
+++ b/etc/awffull.conf
@@ -19,7 +19,7 @@ PageType       cgi
 AllSearchStr yes
 AllAgents yes
 AllReferrers yes
-IgnoreReferrer "http://sunsolve.espix.org"
+IgnoreReferrer "http://wesunsolve.net"
 #CSSFilename	awffull.css
 #UseHTTPS       no
 
