tgo:	Added GPG system to crypt mails 	Added pgpKeyID to user settings 	Added /pgps to check user PGP key status 	fetchData() to be called by default at startsession time 	sendTo() function allow now to crypt mail 	Menu adapted to add pgp link 	Added irc chat link to menu

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -95,3 +95,5 @@ RewriteRule ^(.+\.php)$(.+)$ $1/$2 [L,QSA]
 ##
 #RewriteCond %{HTTP_REFERER} ^.*slashdot.*$
 #RewriteRule ^$ http://wesunsolve.net/static/main.html [R=301,L]
+
+ErrorDocument 404 /404
